--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: blog.sagyzdop
 email: comments@sagyzdop.com
 description: >- # this means to ignore newlines until "baseurl:"
   jingle bells
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://sagyzdop.com" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: sagyzdop
 github_username:  sagyzdop
