--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: blog.sagyzdop
-email: comments@sagyzdop.com
+email: sagyzdop@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   jingle bells
 baseurl: "" # the subpath of your site, e.g. /blog
